syntax = "proto3";
package dydxprotocol.feetiers;

option go_package = "github.com/dydxprotocol/v4-chain/protocol/x/feetiers/types";

// FeeDiscountCampaignParams defines a fee discount period for a specific CLOB
// pair
message FeeDiscountCampaignParams {
  // The CLOB Pair ID this fee holiday applies to
  uint32 clob_pair_id = 1;

  // Start time (Unix timestamp in seconds)
  int64 start_time_unix = 2;

  // End time (Unix timestamp in seconds)
  int64 end_time_unix = 3;

  // Percentage of normal fee to charge during the campaign (in parts per
  // million) 0 = completely free (100% discount) 500000 = charge 50% of normal
  // fee (50% discount) 1000000 = charge 100% of normal fee (no discount)
  uint32 charge_ppm = 4;
}
